MDEV-37368 Assertion failed in close_thread_tables on UPDATE referring bad field

open_tables_for_query makes a redundant cleanup, closing and
unlocking tables. This is not really needed, since a cleanup is done
globally in mysql_execute_command.

However, we might think that is can be useful in a failing substatement,
if it doesn't lead to failing a parent statement (if that is possible).

The problem with global temporary tables arises because it injects a
transaction_participant after successful open, and close_thread_tables
expects a commit before its call *unless* it's a substatement.

Solution: do a redundant cleanup after open only in substatements.